// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions.venues should create an action of type REQUEST_GET_VENUES_SEARCH 1`] = `
Object {
  "error": undefined,
  "meta": undefined,
  "payload": Object {},
  "type": "REQUEST_GET_VENUES_SEARCH",
}
`;

exports[`actions.venues should create an action of type RESOLVE_GET_VENUES_SEARCH 1`] = `
Object {
  "error": undefined,
  "meta": undefined,
  "payload": Array [],
  "type": "RESOLVE_GET_VENUES_SEARCH",
}
`;
